# pocket-tts-lab

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  eslint.config.js  next.config.ts  package.json  railway.json  tsconfig.base.json  tsconfig.json
app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/api/tts/[...path]/: route.ts
components/: BarChart.tsx  BenchmarkPanel.tsx  BrowserTTSPanel.tsx  ClonePanel.tsx  ConversePanel.tsx  GetStarted.tsx  RunModal.tsx  SynthesizePanel.tsx  WhyCareModal.tsx  WhyCarePanel.tsx  ui.tsx
lib/: tts.ts
scripts/: dev.ts  serve.ts
tts-server/: README.md  pyproject.toml  server.py
