[project]
name = "pocket-tts-lab-server"
version = "0.1.0"
description = "FastAPI measurement harness around Kyutai Pocket TTS (CPU-only)."
# torch 2.5+ wheels lag the newest CPython; pin to 3.12 so `uv sync` is reliable.
requires-python = ">=3.11,<3.13"
dependencies = [
    "pocket-tts",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "soundfile>=0.12",
    "numpy>=1.26",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
]

[tool.uv]
# Keep the venv inside the app dir so the island stays self-contained / lift-out-able.
package = false
